k8s/services/nodeport.yml

apiVersion: v1
kind: Service
metadata:
  name: app-node
  namespace: default
spec:
  selector:
    app: frontend-app
  type: NodePort
  ports:
  - name: myjob
    protocol: TCP
    port: 80
    targetPort: 5173
