k8s/services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1 
  namespace: nginx-ingress
spec:
  ingressClassName: nginx 
  rules:
  - host: example.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-node
            port:
              number: 80
